--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "practical",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Rajatgit15.github.io/addJson",
+  "homepage": "https://Rajatgit15.github.io/proj123",
   "dependencies": {
     "@mojs/core": "^0.288.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.2.4",
     "bootstrap": "^4.5.0",
     "datatables.net": "^1.10.21",
     "datatables.net-dt": "^1.10.21",
